--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,16 +11,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".Login"
+            android:theme="@style/AppTheme.Dark">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Login"
-            android:theme="@style/AppTheme.Dark" />
         <activity
             android:name=".SignUp"
             android:theme="@style/AppTheme.Dark" />
@@ -31,7 +30,9 @@
             android:name=".MenuTab"
             android:label=" "
             android:theme="@style/AppTheme" />
-        <activity android:name=".IsiBerita"></activity>
+        <activity android:name=".IsiBerita" />
+        <activity android:name=".InputAcara"
+            android:theme="@style/AppTheme.Dark.InputAcara"/>
     </application>
 
 </manifest>
